Fix a KCM crash when no file manager is installed

If no file manager is installed, the componentchooser KCM would attempt
to dereference a null pointer.

BUG: 422819
FIXED-IN: 5.19.3